--- a/samochodGUI/src/main/resources/com/example/samochodgui/hello-view.fxml
+++ b/samochodGUI/src/main/resources/com/example/samochodgui/hello-view.fxml
@@ -10,11 +10,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="740.0" prefWidth="1220.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.samochodgui.HelloController">
+<BorderPane fx:id="mapa" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#setOnMouseClicked" prefHeight="740.0" prefWidth="1220.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.samochodgui.HelloController">
    <left>
       <VBox prefHeight="650.0" prefWidth="248.0" BorderPane.alignment="CENTER">
          <children>
@@ -381,10 +380,10 @@
          </children>
       </VBox>
    </left>
-   <center>
-      <VBox prefHeight="820.0" prefWidth="972.0" BorderPane.alignment="CENTER">
+   <top>
+      <VBox prefHeight="55.0" prefWidth="1217.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox prefHeight="55.0" prefWidth="652.0">
+            <HBox prefHeight="55.0" prefWidth="962.0">
                <children>
                   <Label text="Samochod">
                      <HBox.margin>
@@ -430,15 +429,10 @@
                   </TextField>
                </children>
             </HBox>
-            <Pane prefHeight="632.0" prefWidth="652.0" style="-fx-background-color: #D3D3D3; -fx-background-radius: 20px; -fx-border-color: black; -fx-border-radius: 20px;">
-               <padding>
-                  <Insets left="20.0" />
-               </padding>
-               <children>
-                  <ImageView fx:id="carImageView" fitHeight="84.0" fitWidth="126.0" pickOnBounds="true" preserveRatio="true" />
-               </children>
-            </Pane>
          </children>
       </VBox>
+   </top>
+   <center>
+      <ImageView fx:id="carImageView" fitHeight="84.0" fitWidth="126.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="TOP_LEFT" />
    </center>
 </BorderPane>
