--- a/samochodGUI/src/main/resources/com/example/samochodgui/SamochodApp.fxml
+++ b/samochodGUI/src/main/resources/com/example/samochodgui/SamochodApp.fxml
@@ -11,15 +11,16 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Rectangle?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="740.0" prefWidth="1220.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.samochodgui.HelloController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="740.0" prefWidth="1220.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.samochodgui.SamochodController">
    <left>
-      <VBox prefHeight="650.0" prefWidth="248.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="685.0" prefWidth="250.0" BorderPane.alignment="CENTER">
          <children>
             <TitledPane animated="false" text="Samochod">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="219.0" prefWidth="246.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="286.0" prefWidth="249.0">
                      <children>
                         <VBox layoutX="9.600000381469727" layoutY="9.600000381469727" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
@@ -114,9 +115,175 @@
                      </children></AnchorPane>
               </content>
             </TitledPane>
-            <TitledPane animated="false" expanded="false" layoutX="10.0" layoutY="10.0" text="Skrzynia Biegow">
+            <TitledPane animated="false" layoutX="10.0" layoutY="422.0" prefHeight="313.0" prefWidth="250.0" text="Sprzeglo">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="211.0" prefWidth="246.0">
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="292.0" prefWidth="246.0">
+                     <children>
+                        <VBox layoutX="9.600000381469727" layoutY="9.600000381469727" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <children>
+                              <HBox>
+                                 <children>
+                                    <Label text="Nazwa">
+                                       <padding>
+                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                       </padding>
+                                    </Label>
+                                    <TextField editable="false">
+                                       <HBox.margin>
+                                          <Insets top="7.0" />
+                                       </HBox.margin>
+                                    </TextField>
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="10.0" layoutY="10.0">
+                                 <children>
+                                    <Label text="Cena">
+                                       <padding>
+                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                       </padding>
+                                    </Label>
+                                    <TextField editable="false">
+                                       <HBox.margin>
+                                          <Insets top="7.0" />
+                                       </HBox.margin>
+                                    </TextField>
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="10.0" layoutY="47.0">
+                                 <children>
+                                    <Label text="Waga">
+                                       <padding>
+                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                       </padding>
+                                    </Label>
+                                    <TextField editable="false">
+                                       <HBox.margin>
+                                          <Insets top="7.0" />
+                                       </HBox.margin>
+                                    </TextField>
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="10.0" layoutY="84.0">
+                                 <children>
+                                    <Label text="Stan">
+                                       <padding>
+                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                       </padding>
+                                    </Label>
+                                    <Circle fill="#13cf3f" layoutX="80.0" layoutY="30.0" radius="15.0" stroke="BLACK" strokeType="INSIDE">
+                                       <HBox.margin>
+                                          <Insets left="10.0" top="5.0" />
+                                       </HBox.margin>
+                                    </Circle>
+                                    <Circle fx:id="stanSprzegla" fill="#cf1212" radius="15.0" stroke="BLACK" strokeType="INSIDE" translateX="-30.0" visible="false">
+                                       <HBox.margin>
+                                          <Insets top="5.0" />
+                                       </HBox.margin>
+                                    </Circle>
+                                 </children>
+                              </HBox>
+                              <HBox layoutX="10.0" layoutY="121.0">
+                                 <children>
+                                    <Button fx:id="nacisnij" mnemonicParsing="false" onAction="#onNacisnij" text="Nacisnij">
+                                       <HBox.margin>
+                                          <Insets left="10.0" top="7.0" />
+                                       </HBox.margin>
+                                       <padding>
+                                          <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+                                       </padding>
+                                    </Button>
+                                    <Button fx:id="zwolnij" layoutX="20.0" layoutY="17.0" mnemonicParsing="false" onAction="#onZwolnij" text="Zwolnij">
+                                       <padding>
+                                          <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+                                       </padding>
+                                       <HBox.margin>
+                                          <Insets left="10.0" top="7.0" />
+                                       </HBox.margin>
+                                    </Button>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </TitledPane>
+         </children>
+      </VBox>
+   </left>
+   <top>
+      <VBox prefHeight="55.0" prefWidth="1217.0" BorderPane.alignment="CENTER">
+         <children>
+            <HBox prefHeight="55.0" prefWidth="962.0">
+               <children>
+                  <Label text="Samochod">
+                     <HBox.margin>
+                        <Insets left="15.0" top="15.0" />
+                     </HBox.margin>
+                  </Label>
+                  <ChoiceBox fx:id="samochodyChoiceBox" prefWidth="150.0">
+                     <HBox.margin>
+                        <Insets left="10.0" top="13.0" />
+                     </HBox.margin>
+                  </ChoiceBox>
+                  <Button fx:id="dodajSamochod" mnemonicParsing="false" onAction="#openAddCarWindow" text="Dodaj">
+                     <HBox.margin>
+                        <Insets left="10.0" top="13.0" />
+                     </HBox.margin>
+                     <padding>
+                        <Insets bottom="3.0" left="20.0" right="20.0" top="3.0" />
+                     </padding>
+                  </Button>
+                  <Button fx:id="usunSamochod" mnemonicParsing="false" onAction="#onUsun" text="Usun">
+                     <HBox.margin>
+                        <Insets left="10.0" top="13.0" />
+                     </HBox.margin>
+                     <padding>
+                        <Insets bottom="3.0" left="20.0" right="20.0" top="3.0" />
+                     </padding>
+                  </Button>
+                  <Label text="Predkosc">
+                     <HBox.margin>
+                        <Insets left="100.0" top="10.0" />
+                     </HBox.margin>
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </Label>
+                  <TextField fx:id="aktPredkosc" editable="false" prefHeight="26.0" prefWidth="48.0">
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                     <HBox.margin>
+                        <Insets left="10.0" top="10.0" />
+                     </HBox.margin>
+                  </TextField>
+                  <Button fx:id="startRace" mnemonicParsing="false" onAction="#onStartRace" text="Start Race!!!">
+                     <padding>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+                     </padding>
+                     <HBox.margin>
+                        <Insets left="200.0" top="7.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+   </top>
+   <center>
+      <BorderPane fx:id="mapa" onMouseClicked="#setOnMouseClicked" style="-fx-background-color: #39FA56;" BorderPane.alignment="TOP_LEFT">
+         <center>
+            <ImageView fx:id="carImageView" fitHeight="84.0" fitWidth="126.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="TOP_LEFT" />
+         </center>
+      </BorderPane>
+   </center>
+   <right>
+      <VBox prefHeight="685.0" prefWidth="250.0" BorderPane.alignment="CENTER">
+         <children>
+            <TitledPane animated="false" text="Skrzynia Biegow">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="250.0" prefWidth="249.0">
                      <children>
                         <VBox layoutX="9.600000381469727" layoutY="9.600000381469727" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
@@ -201,9 +368,9 @@
                   </AnchorPane>
                </content>
             </TitledPane>
-            <TitledPane animated="false" expanded="false" layoutX="10.0" layoutY="216.0" text="Silnik">
+            <TitledPane animated="false" text="Silnik">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0">
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="250.0">
                      <children>
                         <VBox layoutX="24.0" layoutY="29.6" prefHeight="222.0" prefWidth="214.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="0.0">
                            <children>
@@ -289,154 +456,7 @@
                   </AnchorPane>
                </content>
             </TitledPane>
-            <TitledPane animated="false" expanded="false" layoutX="10.0" layoutY="422.0" text="Sprzeglo">
-               <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="292.0" prefWidth="246.0">
-                     <children>
-                        <VBox layoutX="9.600000381469727" layoutY="9.600000381469727" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
-                           <children>
-                              <HBox>
-                                 <children>
-                                    <Label text="Nazwa">
-                                       <padding>
-                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                       </padding>
-                                    </Label>
-                                    <TextField editable="false">
-                                       <HBox.margin>
-                                          <Insets top="7.0" />
-                                       </HBox.margin>
-                                    </TextField>
-                                 </children>
-                              </HBox>
-                              <HBox layoutX="10.0" layoutY="10.0">
-                                 <children>
-                                    <Label text="Cena">
-                                       <padding>
-                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                       </padding>
-                                    </Label>
-                                    <TextField editable="false">
-                                       <HBox.margin>
-                                          <Insets top="7.0" />
-                                       </HBox.margin>
-                                    </TextField>
-                                 </children>
-                              </HBox>
-                              <HBox layoutX="10.0" layoutY="47.0">
-                                 <children>
-                                    <Label text="Waga">
-                                       <padding>
-                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                       </padding>
-                                    </Label>
-                                    <TextField editable="false">
-                                       <HBox.margin>
-                                          <Insets top="7.0" />
-                                       </HBox.margin>
-                                    </TextField>
-                                 </children>
-                              </HBox>
-                              <HBox layoutX="10.0" layoutY="84.0">
-                                 <children>
-                                    <Label text="Stan">
-                                       <padding>
-                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                       </padding>
-                                    </Label>
-                                    <TextField editable="false">
-                                       <HBox.margin>
-                                          <Insets top="7.0" />
-                                       </HBox.margin>
-                                    </TextField>
-                                 </children>
-                              </HBox>
-                              <HBox layoutX="10.0" layoutY="121.0">
-                                 <children>
-                                    <Button fx:id="nacisnij" mnemonicParsing="false" onAction="#onNacisnij" text="Nacisnij">
-                                       <HBox.margin>
-                                          <Insets left="10.0" top="7.0" />
-                                       </HBox.margin>
-                                       <padding>
-                                          <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
-                                       </padding>
-                                    </Button>
-                                    <Button fx:id="zwolnij" layoutX="20.0" layoutY="17.0" mnemonicParsing="false" onAction="#onZwolnij" text="Zwolnij">
-                                       <padding>
-                                          <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
-                                       </padding>
-                                       <HBox.margin>
-                                          <Insets left="10.0" top="7.0" />
-                                       </HBox.margin>
-                                    </Button>
-                                 </children>
-                              </HBox>
-                           </children>
-                        </VBox>
-                     </children>
-                  </AnchorPane>
-               </content>
-            </TitledPane>
          </children>
       </VBox>
-   </left>
-   <top>
-      <VBox prefHeight="55.0" prefWidth="1217.0" BorderPane.alignment="CENTER">
-         <children>
-            <HBox prefHeight="55.0" prefWidth="962.0">
-               <children>
-                  <Label text="Samochod">
-                     <HBox.margin>
-                        <Insets left="15.0" top="15.0" />
-                     </HBox.margin>
-                  </Label>
-                  <ChoiceBox fx:id="samochodyChoiceBox" prefWidth="150.0">
-                     <HBox.margin>
-                        <Insets left="10.0" top="13.0" />
-                     </HBox.margin>
-                  </ChoiceBox>
-                  <Button fx:id="dodajSamochod" mnemonicParsing="false" onAction="#openAddCarWindow" text="Dodaj">
-                     <HBox.margin>
-                        <Insets left="10.0" top="13.0" />
-                     </HBox.margin>
-                     <padding>
-                        <Insets bottom="3.0" left="20.0" right="20.0" top="3.0" />
-                     </padding>
-                  </Button>
-                  <Button fx:id="usunSamochod" mnemonicParsing="false" onAction="#onUsun" text="Usun">
-                     <HBox.margin>
-                        <Insets left="10.0" top="13.0" />
-                     </HBox.margin>
-                     <padding>
-                        <Insets bottom="3.0" left="20.0" right="20.0" top="3.0" />
-                     </padding>
-                  </Button>
-                  <Label text="Predkosc">
-                     <HBox.margin>
-                        <Insets left="100.0" top="10.0" />
-                     </HBox.margin>
-                     <padding>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </padding>
-                  </Label>
-                  <TextField fx:id="aktPredkosc" editable="false" prefHeight="26.0" prefWidth="48.0">
-                     <padding>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </padding>
-                     <HBox.margin>
-                        <Insets left="10.0" top="10.0" />
-                     </HBox.margin>
-                  </TextField>
-               </children>
-            </HBox>
-         </children>
-      </VBox>
-   </top>
-   <center>
-      <BorderPane fx:id="mapa" onMouseClicked="#setOnMouseClicked" style="-fx-background-color: #39FA56;" BorderPane.alignment="TOP_LEFT">
-         <center>
-            <ImageView fx:id="carImageView" fitHeight="84.0" fitWidth="126.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="TOP_LEFT" />
-         </center>
-      </BorderPane>
-   </center>
+   </right>
 </BorderPane>
